Fix alignment

--- a/site-src/assets/css/main.scss
+++ b/site-src/assets/css/main.scss
@@ -13,52 +13,46 @@
   background-size: cover;
 }
 
-.masthead__menu-item a {
-
-  text-decoration: none;
-
-}
-
-.masthead__menu-item a:hover {
-
-  font-weight: 600;
-
-}
-
-.masthead__inner-wrap {
-
+.masthead__inner-wrap,
+.greedy-nav,
+.visible-links {
   display: flex;
-
   align-items: center;
-
-  justify-content: space-between;
-
 }
 
-.greedy-nav {
-
-  display: flex;
-
-  align-items: center;
-
+.visible-links {
   gap: 1rem;
+}
 
+.masthead__menu-item {
+  display: flex;
+  align-items: center;
 }
 
 .site-title {
-
+  line-height: 1;
   display: flex;
-
   align-items: center;
-
-  height: 100%;
-
 }
 
-.masthead__menu-item a {
+.masthead__menu-item a,
+.masthead__menu-item a:visited,
+.masthead__menu-item a:hover,
+.masthead__menu-item a:focus {
+  text-decoration: none !important;
+}
 
-  display: flex;
+.masthead__menu-item a:hover,
+.masthead__menu-item a:focus {
+  font-weight: 600;
+}
 
-  align-items: center;
+.masthead__menu-item a::before,
+.masthead__menu-item a::after {
+  display: none !important;
+}
 
+.masthead__menu-item iframe {
+  display: block;
+  margin-top: 2px;
 }
